Fix icons not showing up on iphone safari

--- a/src/App.css
+++ b/src/App.css
@@ -122,6 +122,32 @@ h5 {
   width: 400px;
 }
 
+/* icons fix for iphones using safari */
+.material-icons {
+  font-family: 'Material Icons';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px; /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
+
+  /* Support for IE. */
+  font-feature-settings: 'liga';
+}
+
 /* Music note animation from https://codepen.io/Schepotin/pen/GrWJzr */
 .note-position-1 {
   top: 200px;
